[package]
authors = ["Bholdus <https://github.com/bholdus>"]
description = "Real world decentralized finance."
edition = "2018"
homepage = "https://bholdus.com"
name = "bholdus-cli"
repository = "https://github.com/bholdus/bholdus-chain/"
version = "1.0.14"


# [build-dependencies]
# orml-build-script-utils = { path = "../../orml/build-script-utils"}

[build-dependencies.substrate-build-script-utils]
git = "https://github.com/bholdus/substrate.git"
branch = "bholdus-monthly-2021-11"
version = "3.0.0"

[dependencies]
log = "0.4.8"
structopt = "0.3.8"

frame-benchmarking = { version = "4.0.0-dev", git = "https://github.com/bholdus/substrate.git", branch = "bholdus-monthly-2021-11" }
frame-benchmarking-cli = { version = "4.0.0-dev", optional = true, git = "https://github.com/bholdus/substrate.git", branch = "bholdus-monthly-2021-11" }
try-runtime-cli = { version = "0.10.0-dev", optional = true, git = "https://github.com/bholdus/substrate.git", branch = "bholdus-monthly-2021-11" }
pallet-transaction-payment-rpc = { version = "4.0.0-dev", git = "https://github.com/bholdus/substrate.git", branch = "bholdus-monthly-2021-11" }
sc-cli = { version = "0.10.0-dev", optional = true, git = "https://github.com/bholdus/substrate.git", branch = "bholdus-monthly-2021-11" }
sc-client-api = { version = "4.0.0-dev", git = "https://github.com/bholdus/substrate.git", branch = "bholdus-monthly-2021-11" }
sc-service = { version = "0.10.0-dev", optional = true, git = "https://github.com/bholdus/substrate.git", branch = "bholdus-monthly-2021-11" }
sc-telemetry = { version = "4.0.0-dev", git = "https://github.com/bholdus/substrate.git", branch = "bholdus-monthly-2021-11" }
sp-runtime = { version = "4.0.0-dev", git = "https://github.com/bholdus/substrate.git", branch = "bholdus-monthly-2021-11" }
sp-core = { version = "4.0.0-dev", optional = true, git = "https://github.com/bholdus/substrate.git", branch = "bholdus-monthly-2021-11" }
node-inspect = { version = "0.9.0-dev", optional = true, git = "https://github.com/bholdus/substrate.git", branch = "bholdus-monthly-2021-11" }

service = { package = "bholdus-service", optional = true, path = "../service" }

[features]
default = ["cli"]
cli = [
	"service",
	"node-inspect",
	"sp-core",
	"sc-cli",
	"sc-service",
	"frame-benchmarking-cli",
	"try-runtime-cli",
]
runtime-benchmarks = ["service/runtime-benchmarks", "frame-benchmarking-cli"]
try-runtime = ["try-runtime-cli", "service/try-runtime"]

with-ulas-runtime = ["service/with-ulas-runtime"]
with-cygnus-runtime = ["service/with-cygnus-runtime"]
with-phoenix-runtime = ["service/with-phoenix-runtime"]

with-all-runtime = [
	"with-ulas-runtime",
	"with-cygnus-runtime",
	"with-phoenix-runtime",
	"service/with-all-runtime",
]
