[package]
authors = ["Bholdus <https://github.com/bholdus>"]
description = "Real world decentralized finance."
edition = "2018"
homepage = "https://bholdus.com"
name = "bholdus-cli"
repository = "https://github.com/bholdus/bholdus-chain/"
version = "1.0.17"


# [build-dependencies]
# orml-build-script-utils = { path = "../../orml/build-script-utils"}

[build-dependencies.substrate-build-script-utils]
git = "https://github.com/BHONetwork/substrate.git"
branch = "bho-polkadot-v0.9.18"

[dependencies]
clap = { version = "3.1", features = ["derive"] }
log = "0.4.8"

frame-benchmarking = { git = "https://github.com/BHONetwork/substrate.git", branch = "bho-polkadot-v0.9.18" }
frame-benchmarking-cli = { optional = true, git = "https://github.com/BHONetwork/substrate.git", branch = "bho-polkadot-v0.9.18" }
try-runtime-cli = { optional = true, git = "https://github.com/BHONetwork/substrate.git", branch = "bho-polkadot-v0.9.18" }
pallet-transaction-payment-rpc = { git = "https://github.com/BHONetwork/substrate.git", branch = "bho-polkadot-v0.9.18" }
sc-cli = { optional = true, git = "https://github.com/BHONetwork/substrate.git", branch = "bho-polkadot-v0.9.18" }
sc-client-api = { git = "https://github.com/BHONetwork/substrate.git", branch = "bho-polkadot-v0.9.18" }
sc-service = { optional = true, git = "https://github.com/BHONetwork/substrate.git", branch = "bho-polkadot-v0.9.18" }
sc-telemetry = { git = "https://github.com/BHONetwork/substrate.git", branch = "bho-polkadot-v0.9.18" }
sp-runtime = { git = "https://github.com/BHONetwork/substrate.git", branch = "bho-polkadot-v0.9.18" }
sp-core = { optional = true, git = "https://github.com/BHONetwork/substrate.git", branch = "bho-polkadot-v0.9.18" }
node-inspect = { optional = true, git = "https://github.com/BHONetwork/substrate.git", branch = "bho-polkadot-v0.9.18" }

service = { package = "bholdus-service", optional = true, path = "../service" }

[features]
default = ["cli"]
cli = [
	"service",
	"node-inspect",
	"sp-core",
	"sc-cli",
	"sc-service",
	"frame-benchmarking-cli",
	"try-runtime-cli",
]
runtime-benchmarks = ["service/runtime-benchmarks", "frame-benchmarking-cli"]
try-runtime = ["try-runtime-cli", "service/try-runtime"]

with-ulas-runtime = ["service/with-ulas-runtime"]
with-phoenix-runtime = ["service/with-phoenix-runtime"]

with-all-runtime = [
	"with-ulas-runtime",
	"with-phoenix-runtime",
	"service/with-all-runtime",
]

manual-seal = ["service/manual-seal"]